@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentTicketForward.pm - to forward a message
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketForward.pm,v 1.54.2.1 2009-09-24 19:50:43 ub Exp $
+# $Id: AgentTicketForward.pm,v 1.54.2.2 2010-01-25 11:06:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.54.2.1 $) [1];
+$VERSION = qw($Revision: 1.54.2.2 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -600,11 +600,17 @@ sub SendEmail {
         # remove unused inline images
         my @NewAttachmentData = ();
         REMOVEINLINE:
-        for my $TmpAttachment (@AttachmentData) {
-            next REMOVEINLINE if $TmpAttachment->{ContentID}
-                    && $TmpAttachment->{ContentID} =~ /^inline/
-                    && $GetParam{Body} !~ /$TmpAttachment->{ContentID}/;
-            push @NewAttachmentData, \%{$TmpAttachment};
+        for my $Attachment (@AttachmentData) {
+            my $ContentID = $Attachment->{ContentID};
+            if ($ContentID) {
+                my $ContentIDHTMLQuote = $Self->{LayoutObject}->Ascii2Html(
+                    Text => $ContentID,
+                );
+                next REMOVEINLINE if $GetParam{Body} !~ /(\Q$ContentIDHTMLQuote\E|\Q$ContentID\E)/i;
+            }
+
+            # remember inline images and normal attachments
+            push @NewAttachmentData, \%{$Attachment};
         }
         @AttachmentData = @NewAttachmentData;
 
